fixed z-indexes so that the navbar menu will always be in front

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -202,6 +202,7 @@ body {
     width: 100px;
     height: 100px;
     position: relative;
+    z-index: -3;
     top: 300px;
     left: 100px;
     display: flex;
@@ -221,6 +222,7 @@ body {
     width: 100px;
     height: 100px;
     position: relative;
+    z-index: -3;
     animation: slide 1.5s infinite;
     display: flex;
     justify-content: center;
@@ -252,9 +254,9 @@ body {
     width: 300px;
     height: 110px;
     position: absolute;
-    top: 580px;
+    z-index: -3;
+    top: 540px;
     background-color: white;
-    z-index: 100000;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -290,9 +292,14 @@ body {
 /* Aligns the pop up box to the middle */
 #msg-box{
     top: 30vh;
-    left: 12vw;
     padding: 50px;
     position: absolute;
+    left:0;
+    right:0;
+    margin-left:auto;
+    margin-right:auto;
+    z-index: -1;
+    width: 300px;
     border: 3px solid black;
     background-color: beige;
     display: flex;
